fix spacing of inputs

--- a/src/app/new-tab/new-tab/reporting-entity-new/reporting-entity-new.component.scss
+++ b/src/app/new-tab/new-tab/reporting-entity-new/reporting-entity-new.component.scss
@@ -27,7 +27,7 @@ form {
   .bottom-side{
     display: flex;
     flex-wrap: wrap;
-    column-gap: 31.33px;
+    justify-content: space-between;
     row-gap: 20px;
   }
 
